horizontal scroll fixed

--- a/onlined.css
+++ b/onlined.css
@@ -144,7 +144,6 @@ span.username {
   top: 0;
   left: 0;
   z-index:10;
-  width:100%;
   margin: 0px;
   padding:0px;
   background-color: #5f5f5f;
